--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^6.0.1",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.7.23"
     }
 }
