--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     },
     "devDependencies": {
         "@inertiajs/vue3": "^2.0.0",
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^6.0.1",
-        "axios": "^1.8.2",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
+        "lodash": "^4.17.21",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5",
         "vite": "^7.0.4",
         "vue": "^3.4.0"
     },
