--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@headlessui/vue": "^1.7.23"
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
+        "ziggy-js": "^2.5.3"
     }
 }
