--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.2.0",
+        "vuex": "^4.0.2",
         "ziggy-js": "^2.5.3"
     }
 }
